--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.CNIT_355_PROJECT"
         tools:targetApi="31">
         <activity
+            android:name=".ReceiptScannerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DebtTrackerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BillCalendarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OverviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoadingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
